个人博客第一次提交

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <div class="container">
                         <div class="title-block mx-auto">
                             <div class="section_title mb-4 text-center">
-                                <h2><span>About Us</span></h2>
+                                <h2><span>About Me</span></h2>
                                 <p class="section_subtitle mx-auto">dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. this dolor sit amet.</p>
                             </div>
                         </div>
